Vimesoft revizelerin bitişi

--- a/my-account.html
+++ b/my-account.html
@@ -185,9 +185,9 @@
                     </div>
                 </div>
                 <div class="account-content">
-                    <div class="account-content">
-                        <div class="row g-0">
-                            <div class="col-xl-3 col-12">
+                    <div class="account-content-wrapper">
+                        <div class="row">
+                            <div class="col-xl-4 col-12">
                                 <div class="account-pic-line">
                                     <div class="account-pic mb-4">
                                         <img src="img/profil-pic.png" alt="">
@@ -198,7 +198,7 @@
                                             <span>Katılımcı Sayısı</span>
                                             <div class="btn-acc">10</div>
                                         </div>
-                                        <div class="act-flex d-flex mb-5 align-items-center justify-content-between">
+                                        <div class="act-flex d-flex mb-3 align-items-center justify-content-between">
                                             <span>Konferans Kaydı</span>
                                             <div class="btn-acc2">8</div>
                                         </div>
@@ -208,8 +208,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-9 col-12">
-                                <div class="account-inp">
+                            <div class="col-xl-8 col-12">
+                                <div class="account-inp ms-xl-3 ms-0">
                                     <div class="contact-box-flex d-xl-flex align-items-center justify-content-between">
                                         <div class="contact-input-box">
                                             <input type="text" class="form-input editable" value="Onur" id="fname" name="fname" autocomplete="off" required="required"/>
