--- a/my-account-packets-2.html
+++ b/my-account-packets-2.html
@@ -220,7 +220,7 @@
                                             </ul>
                                         </div>
                                         <div id="paket" class="tab-content active">
-                                            <div class="col-xl-8 col-12">
+                                            <div class="col-xxl-8 col-xl-12 col-12">
                                                 <div class="acc-personal-flex d-flex align-items-center">
                                                     <div class="package-owned-text">Sahip Olunan Paket</div>
                                                     <div class="package-owned">
@@ -247,10 +247,11 @@
                                                         </div>
                                                         <div class="detail-pop-item">
                                                             <div class="detail-load">
-                                                                <div class="detail-loading" style="width: 60%;"></div>
-                                                            </div>
-                                                            <div class="detail-load-text">
-                                                                60%
+                                                                <div class="detail-loading" style="width: 60%;">
+                                                                    <div class="detail-load-text">
+                                                                        60%
+                                                                    </div>
+                                                                </div>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -272,7 +273,7 @@
                                                     <div class="package-owned">
                                                         <div class="label-control label-xc d-flex align-items-center">
                                                             <label for="b_item" class="camera-no">Hayır</label>
-                                                            <input type="checkbox" class="switch_1 switch_y" id="b_item">
+                                                            <input type="checkbox" class="switch_1 switch_y" id="b_item" />
                                                             <label for="b_item" class="camera-yes">Evet</label>
                                                         </div>
                                                     </div>
