--- a/create-account.html
+++ b/create-account.html
@@ -125,18 +125,7 @@
                                 </div>
                                 <div class="contact-check-box ">
                                     <div class="extra-note pb-4">
-                                        Aşağıdaki devam et butonuna tıkladığınızda <span class="delete p-0 p-relative tpx-cc">Gizlilik Bildirimini <div class="tooltipx">
-                                            <div class="tooltipx-text">
-                                                Sadece Ücretli Aboneler Tarafından Kullanılabilir. Paketinizi Yükseltmek için <a href="#">Hemen Tıklayın.</a>
-                                                <span class="tx-span"></span>
-                                            </div>
-                                        </div></span> ve <span class="delete p-0 p-relative tpx-cc">Hizmet Şartlarını
-                                            <div class="tooltipx">
-                                                <div class="tooltipx-text">
-                                                    Sadece Ücretli Aboneler Tarafından Kullanılabilir. Paketinizi Yükseltmek için <a href="#">Hemen Tıklayın.</a>
-                                                    <span class="tx-span"></span>
-                                                </div>
-                                            </div>
+                                        Aşağıdaki devam et butonuna tıkladığınızda <span class="delete p-0 p-relative tpx-cc kvkk-btn">Gizlilik Bildirimini</span> ve <span class="delete p-0 p-relative tpx-cc kvkk-btn2">Hizmet Şartlarını
                                         </span> kabul etmiş olursunuz.
                                     </div>
                                     <div class="create-btns">
@@ -186,7 +175,30 @@
         </div>
         <div class="calendar-popup"></div>
     </div>
-
+    <!-- KVKK Popup -->
+    <div class="acc-packets2-popup kvkk-popup">
+        <div class="calendar-popup-content packets2-popup">
+            <div class="path-popup-title mb-4">KVKK Lorem</div>
+            <div class="kvkk-info">
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia voluptatem, at laborum molestias veniam illo similique optio quo provident nam modi magni vel aliquid, quam ducimus alias nobis. Aliquid cupiditate voluptate quisquam odio quia numquam sed corrupti fuga facere error aperiam aspernatur, nesciunt laboriosam nihil ab repellat beatae, doloribus vitae.
+                </p>
+            </div>         
+        </div>
+        <div class="calendar-popup"></div>
+    </div>
+    <!-- KVKK Popup 2 -->
+    <div class="acc-packets2-popup kvkk-popup2">
+        <div class="calendar-popup-content packets2-popup">
+            <div class="path-popup-title mb-4">KVKK Lorem</div>
+            <div class="kvkk-info">
+                <p>
+                    2 - Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia voluptatem, at laborum molestias veniam illo similique optio quo provident nam modi magni vel aliquid, quam ducimus alias nobis. Aliquid cupiditate voluptate quisquam odio quia numquam sed corrupti fuga facere error aperiam aspernatur, nesciunt laboriosam nihil ab repellat beatae, doloribus vitae.
+                </p>
+            </div>         
+        </div>
+        <div class="calendar-popup"></div>
+    </div>
 
     <footer class="footer">
         <div class="main-footer">
@@ -289,16 +301,20 @@
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/script.js"></script>
     <script>
-        $(function () {
-            $('.extra-buy-packet').click(function(){
-                $(this).closest('.extra-buy-packet').toggleClass('active');
-            });
-            $('.extra-buy-packet').click(function(){
-                $(this).closest('.extra-buy-packet').find('.path-tick').toggleClass('active');
-            });
-            $('.chosen-img').click(function(){
-                $(this).closest('.chosen-sell-icon').find('.path-popx').toggleClass('active');
-            });
+        // Kvkk Popup
+        $('.kvkk-btn').on('click', function(e) {
+            $('.kvkk-popup').toggleClass('active');
+        });
+        $('.kvkk-btn2').on('click', function(e) {
+            $('.kvkk-popup2').toggleClass('active');
+        });
+        // Kvkk Popup close
+        $('.calendar-popup').on('click', function(e) {
+            $('.kvkk-popup').removeClass('active');
+        });
+        // Kvkk Popup close
+        $('.calendar-popup').on('click', function(e) {
+            $('.kvkk-popup2').removeClass('active');
         });
     </script>
 
