--- a/vimesoft-apply.html
+++ b/vimesoft-apply.html
@@ -121,7 +121,7 @@
                                     </div>
                                     <div class="contact-check-box d-flex">
                                         <input type="checkbox" class="checkbox" id="condition" name="condition" value="condition"/>
-                                        <label for="condition">Katılım Koşulları'nı Onaylıyorum.</label>
+                                        <label for="condition" class="kvkk-btn">Katılım Koşulları'nı Onaylıyorum.</label>
                                     </div>
                                     <div class="contact-check-box d-flex">
                                         <input type="checkbox" class="checkbox" id="informed" name="informed" value="informed"/>
@@ -141,6 +141,21 @@
             </div>
         </div>
     </main>
+
+
+    <!-- KVKK Popup -->
+    <div class="acc-packets2-popup kvkk-popup">
+        <div class="calendar-popup-content packets2-popup">
+            <div class="path-popup-title mb-4">KVKK Lorem</div>
+            <div class="kvkk-info">
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia voluptatem, at laborum molestias veniam illo similique optio quo provident nam modi magni vel aliquid, quam ducimus alias nobis. Aliquid cupiditate voluptate quisquam odio quia numquam sed corrupti fuga facere error aperiam aspernatur, nesciunt laboriosam nihil ab repellat beatae, doloribus vitae.
+                </p>
+            </div>         
+        </div>
+        <div class="calendar-popup"></div>
+    </div>
+
 
     <footer class="footer">
         <div class="main-footer">
@@ -241,5 +256,15 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/script.js"></script>
+    <script>
+        // Kvkk Popup
+        $('.kvkk-btn').on('click', function(e) {
+            $('.kvkk-popup').toggleClass('active');
+        });
+        // Kvkk Popup close
+        $('.calendar-popup').on('click', function(e) {
+            $('.kvkk-popup').removeClass('active');
+        });
+    </script>
 </body>
 </html>
