--- a/create-account.html
+++ b/create-account.html
@@ -26,7 +26,7 @@
 
         <main class="main">
             <div class="meeting-plans-wrapper tabs pb-5">
-                <div class="my-account-title setting-title mb-md-5 mb-4">
+                <div class="my-account-title step-fix setting-title mb-md-5 mb-4">
                     <div class="packet-path-all d-flex align-items-center">
                         <div class="packet-path">
                             <div class="path-item"><span class="path-span success"></span><div class="path-name">Paket Seçimi</div></div>
