--- a/packets-path.html
+++ b/packets-path.html
@@ -26,7 +26,59 @@
 
         <main class="main">
             <div class="meeting-plans-wrapper pb-5">
-                <div class="my-account-title setting-title mb-md-5 mb-4">
+                <div class="top-fix-menu d-xl-flex align-items-center">
+                    <div class="main-menu d-xl-flex align-items-center justify-content-between">
+                        <div class="menu-left">
+                            <nav class="nav-head-menu">
+                                <ul class="d-xl-flex align-items-center">
+                                    <li><a href="#">Ürünler</a></li>
+                                    <li><a href="#">Paketler</a></li>
+                                    <li><a href="#">iletişim</a></li>
+                                </ul>
+                            </nav>
+                        </div>
+                        <div class="menu-right">
+                            <nav class="nav-head-select">
+                                <ul class="d-xl-flex align-items-center">
+                                    <li><a href="#" class="btn-buy">Satın Al</a></li>
+                                    <li><a href="#" class="btn-buy">Ücretsiz Dene</a></li>
+                                    <li><a href="#" class="btn-login">Giriş Yap</a></li>
+                                    <li><img src="img/menu-icon2.png" alt=""></li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                    <div class="mobile-menu-icon">
+                        <img src="img/menu-icon2.png" alt="">
+                    </div>
+                    <div class="mobile-menu">
+                        <div class="mobile-menu-close">
+                            <img src="img/close.png" alt="">
+                        </div>
+                        <div class="mobile-logo">
+                            <img src="img/mobile-logo.png" alt="">
+                        </div>
+                        <div class="mobile-navbar">
+                            <nav>
+                                <ul class="mobilenav-ul">
+                                    <li class="mobilenav-li"><a href="#">Ürünler</a></li>
+                                    <li class="mobilenav-li"><a href="#">Paketler</a></li>
+                                    <li class="mobilenav-li"><a href="#">İletişim</a></li>
+                                </ul>
+                            </nav>
+                        </div>
+                        <div class="mobile-nav-btns">
+                            <nav>
+                                <ul>
+                                    <li><a href="#" class="btn-buy">Satın Al</a></li>
+                                    <li><a href="#" class="btn-buy">Ücretsiz Dene</a></li>
+                                    <li><a href="#" class="btn-login">Giriş Yap</a></li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+                <div class="my-account-title step-fix setting-title mb-md-5 mb-4">
                     <div class="packet-path-all d-flex align-items-center">
                         <div class="packet-path">
                             <div class="path-item"><span class="path-span active"></span><div class="path-name">Paket Seçimi</div></div>
@@ -165,14 +217,14 @@
                                     <div class="extra-buy-title owned-span mb-4">
                                         <span class="path-number">?</span> Opsiyonel alımlar.
                                     </div>
-                                    <div class="d-flex flex-wrap tabs">
-                                        <div class="extra-buy-packet text-center tabs-item" data-item="k_katilimcisi">
+                                    <div class="d-flex flex-sm-wrap tabs">
+                                        <div class="extra-buy-packet text-center ext-sm tabs-item" data-item="k_katilimcisi">
                                             <div class="extra-head pb-2">
                                                 <img src="img/add-user.svg" alt="">
                                             </div>
                                             <div class="eh-text">Konferans Katılımcısı</div>
                                         </div>
-                                        <div class="extra-buy-packet text-center tabs-item" data-item="ek_kayit">
+                                        <div class="extra-buy-packet text-center ext-sm tabs-item" data-item="ek_kayit">
                                             <div class="extra-head pb-3">
                                                 <img src="img/cloudy.svg" alt="">
                                             </div>
@@ -284,19 +336,14 @@
                                     </div>
                                     <div class="contact-check-box d-flex mt-md-5 mt-4 p-relative">
                                         <input type="checkbox" class="checkbox" id="condition" name="condition" value="condition"/>
-                                        <label for="condition" class="tpx-cc">
+                                        <label for="condition">
                                             Katılım Koşulları'nı Onaylıyorum.
                                         </label>
-                                        <div class="tooltipx">
-                                            <div class="tooltipx-text">
-                                                Sadece Ücretli Aboneler Tarafından Kullanılabilir. Paketinizi Yükseltmek için <a href="#">Hemen Tıklayın.</a>
-                                                <span class="tx-span"></span>
-                                            </div>
-                                        </div>
                                     </div>
                                     <div class="path-btns">
                                         <a href="#" class="btn-cancel me-md-4 me-3">İptal</a>
-                                        <a href="#" class="btn-send">Devam Et</a>
+                                        <a href="#" class="btn-send me-md-4 me-3">Devam Et</a>
+                                        <a href="#index.html" class="back-to-index">Ana Sayfaya Dön</a>
                                     </div>
                                 </div>
                             </div>
@@ -448,11 +495,6 @@
             });
             $('.chosen-img').click(function(){
                 $(this).closest('.chosen-sell-icon').find('.path-popx').toggleClass('active');
-            });
-        });
-        $(function () {
-            $('.tpx-cc').on('click',function () {
-                $('.tooltipx').toggleClass('active');
             });
         });
     </script>
