Vimesoft Son revizeler 07.12.2021

--- a/packets-path.html
+++ b/packets-path.html
@@ -490,7 +490,7 @@
     <script>
         $(function () {
             $('.extra-buy-packet').click(function(){
-                $(this).closest('.extra-buy-packet').toggleClass('active');
+                $(this).toggleClass('active');
             });
             $('.extra-buy-packet').click(function(){
                 $(this).closest('.extra-buy-packet').find('.path-tick').toggleClass('active');
