--- a/meeting-records.html
+++ b/meeting-records.html
@@ -200,6 +200,11 @@
                     Ücretsiz Deneme Sürümünün Bitmesine 12 Gün Kaldı.
                 </div>
                 <a href="#" class="btn-cancel btn-free-trial">Satın Al</a>
+                <div class="free-trial-arrow">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20.224" height="36" viewBox="0 0 20.224 36">
+                        <path id="l-arrow" d="M6.1,18,19.482,4.385a2.593,2.593,0,0,0,0-3.633,2.508,2.508,0,0,0-3.581,0L.736,16.173a2.6,2.6,0,0,0-.074,3.547L15.891,35.25a2.511,2.511,0,0,0,3.581,0,2.593,2.593,0,0,0,0-3.633Z" fill="#fff"/>
+                    </svg>
+                </div>
             </div>
         </main>
     </div>    
@@ -307,5 +312,11 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src='https://cdn.jsdelivr.net/jquery.selectric/1.11.1/jquery.selectric.min.js'></script>
     <script src="js/script.js"></script>
+    <script>
+        // Free Trial
+        $(".free-trial").click(function(){
+            $(this).toggleClass("active");
+        });
+    </script>
 </body>
 </html>
