--- a/my-account-packets-2.html
+++ b/my-account-packets-2.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
     	
 </head>
-<body class="bg-none">
+<body>
 
     <div class="d-xl-flex content-flex">
         <header class="header">
